[package]
name = "webp_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
webp = "0.2"
rayon = "1.7.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1